double scroll fix

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ html {
   overflow-x: hidden;
   width: 100%;
   height: 100%;
-  min-height: 1679px;
   background-color: #000;
 }
 
